fixed board tile spacing

--- a/src/stylesheets/Board.css
+++ b/src/stylesheets/Board.css
@@ -1,6 +1,6 @@
 .tile-list {
   width: 100%;
-  height: 138px;
+  max-height: 138px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -29,6 +29,7 @@
 .tile-list-container {
   margin: 0 auto;
   max-width: 506px;
+  height: 194px;
   width: 100%;
   padding: 0.5rem;
   margin-top: 1rem;
